--- a/Highfive_Hospital/app/config/routing.yml
+++ b/Highfive_Hospital/app/config/routing.yml
@@ -2,3 +2,6 @@ high5_hospital_admin:
     resource: "@High5HospitalAdminBundle/Resources/config/routing.yml"
     prefix:   /
 
+high5_hospital_admin_login:
+    path: /admin/login
+    defaults: { _controller: High5HospitalAdminBundle:Login:login }
