--- a/Highfive_Hospital/src/High5/Hospital/AdminBundle/Resources/config/routing.yml
+++ b/Highfive_Hospital/src/High5/Hospital/AdminBundle/Resources/config/routing.yml
@@ -5,7 +5,7 @@ high5_hospital_admin_homepage:
 high5_hospital_admin_login:
     path: /login
     defaults: { _controller: High5HospitalAdminBundle:Login:login }
-    
+
 high5_hospital_admin_create_hospital:
     path: /hospital/create
-    defaults: {_controller: High5HospitalAdminBundle:Default:addHospital }
+    defaults: {_controller: High5HospitalAdminBundle:Default:createHospital }
