--- a/Highfive_Hospital/src/High5/Hospital/AdminHospitalBundle/Resources/config/routing.yml
+++ b/Highfive_Hospital/src/High5/Hospital/AdminHospitalBundle/Resources/config/routing.yml
@@ -1,7 +1,7 @@
 high5_hospital_admin_hospital_homepage:
-    path:     /hello/{name}
+    path:     /homepage
     defaults: { _controller: High5HospitalAdminHospitalBundle:Default:index }
-    
+
 high5_hospital_adminhospital_login:
     path: /authentification
     defaults: { _controller: High5HospitalAdminHospitalBundle:Default:login }
